# ResevanjePragozda

./: CMakeLists.txt  CMakeSettings.json
libs/glad3.3/include/glad/: glad.h
libs/glad3.3/src/: glad.c
src/: Animacija.cpp  Animacija.h  Input.cpp  Input.h  InputDefines.h  Main.cpp  Objekti.cpp  Objekti.h  Ostalo.cpp  Ostalo.h  Risalnik.cpp  Risalnik.h  Text.cpp  Text.h
src/Objekti/: Gozd.cpp  Gozd.h  Igralec.cpp  Igralec.h  MiniMap.cpp  MiniMap.h  Pomocnik.cpp  Pomocnik.h  TileMap.cpp  TileMap.h  Zlobnez.cpp  Zlobnez.h
src/Scene/: IgraScena.cpp  IgraScena.h  MeniScena.cpp  MeniScena.h  Scena.cpp  Scena.h  TestScena.cpp  TestScena.h
